External API Hit and Eleven Labs API Hit